# dictmatch

./: README.md  demo.py  setup.cfg  setup.py
dictmatch/: __init__.py  prefix_dict.py
eval/: speed_eval.py
