[metadata]
name = dictmatch
author = Huang Dingbang
author_email = huangdb3@mail2.sysu.edu.cn
version = 0.1.0
description = A Dict Match Utilities.
home_page = https://github.com/Bond-H/dictmatch

[options]
packages = find:
include_package_data = True
zip_safe = False

[sdist]
dist_dir = output/dist

[bdist_wheel]
universal = 1
dist_dir = output/dist

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
